[gd_scene load_steps=21 format=2]

[ext_resource path="res://Textures/LaserPlant-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LaserEnemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/RayCast2D.gd" type="Script" id=3]
[ext_resource path="res://Scripts/LaserHitbox.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 5 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 4.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Close",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "Open",
"speed": 5.0
} ]

[node name="LaserPlant" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2147483712

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -1000 )
script = ExtResource( 3 )

[node name="Line2D2" type="Line2D" parent="RayCast2D"]
position = Vector2( 0, 6.10352e-05 )
points = PoolVector2Array( 0, 0, 0, -1000 )
default_color = Color( 0.498039, 0.0235294, 0.690196, 1 )

[node name="Line2D" type="Line2D" parent="RayCast2D"]
position = Vector2( 0, 6.10352e-05 )
points = PoolVector2Array( 0, 0, 0, -1000 )
width = 5.0
default_color = Color( 0.360784, 0.0235294, 0.533333, 1 )

[node name="Hitbox" type="Area2D" parent="RayCast2D"]
position = Vector2( 0, 6.10352e-05 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/Hitbox"]
position = Vector2( 0, -500 )

[node name="Tween" type="Tween" parent="RayCast2D"]

[node name="FireTimer" type="Timer" parent="."]

[node name="FireDuration" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
animation = "Idle"
playing = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="FireDuration" to="." method="_on_FireDuration_timeout"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
